# CompilerOCaml

./: Makefile  README.md  dune-project  make_output_dirs.sh
resources/: driver.c  error.c  error.h  gc.c  gc.h  printer.c  printer.h
src/compiler/: assembly.ml  builder.ml  compiler.ml  dune  environment.ml  fileUtils.ml  freshening.ml  subprocessUtils.ml  wellformedness.ml
src/language/: asts.ml  dune  lexer.mll  parser.mly  parserTool.ml
src/main/: dune  hatch.ml
src/tests/: dune  testUtils.ml  tests.ml
test_code/: after_4.bird  and.bird  arithmetic.bird  before_4.bird  before_after_4.bird  closure1.bird  closure10.bird  closure11.bird  closure2.bird  closure3.bird  closure4.bird  closure5.bird  closure6.bird  closure7.bird  closure9.bird  equal_to.bird  equal_to2.bird  equal_to_false.bird  error1.bird  error1_1.bird  error2.bird  error2_1.bird  function_call1.bird  function_call2.bird  function_call3.bird  function_call4.bird  function_call5.bird  function_error1.bird  function_error2.bird  function_error3.bird  function_error4.bird  function_error5.bird  function_error6.bird  function_factorial.bird  function_left_to_right.bird  gc_cycle_closure_memory.bird  gc_cycle_tuple_memory.bird  gc_mark_test.bird  gc_use_closure_memory.bird  gc_use_tuple_memory.bird  (+47 more)
